--- a/app/src/main/res/layout/fragment_photo_preview.xml
+++ b/app/src/main/res/layout/fragment_photo_preview.xml
@@ -21,6 +21,7 @@
                 android:layout_gravity="center" />
         </FrameLayout>
         <LinearLayout
+            android:id="@+id/hideInResult"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -36,6 +37,21 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/action_cancel"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/showInResult"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/diseaseText"
+                android:layout_width="match_parent"
+                android:layout_height="338dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/resultImage"
+                android:text="Image Result" />
         </LinearLayout>
 
 
