update camerakit added

--- a/app/src/main/res/layout/activity_host.xml
+++ b/app/src/main/res/layout/activity_host.xml
@@ -8,5 +8,6 @@
     <FrameLayout
         android:id="@+id/fragmentholder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@color/pink"/>
 </android.support.constraint.ConstraintLayout>
