--- a/app/src/main/res/layout/fragment_photo_preview.xml
+++ b/app/src/main/res/layout/fragment_photo_preview.xml
@@ -52,6 +52,14 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/resultImage"
                 android:text="Image Result" />
+            <TextView
+                android:id="@+id/Accuracy"
+                android:layout_width="match_parent"
+                android:layout_height="338dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/resultImage"
+                android:text="Accuracy" />
         </LinearLayout>
 
 
