--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="transparent">#00000000</color>
     <color name="black">#000</color>
     <color name="white">#fff</color>
+    <color name="pink">#ffc0cb</color>
 </resources>
